--- a/index.html
+++ b/index.html
@@ -1,72 +1,8 @@
 <html>
-    <style>
-        @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap");
+    <head>
+    <link rel="stylesheet" href="styles.css">
 
-* {
-  font-family: "Dancing Script", cursive;
-  margin: 0;
-}
-
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-}
-
-#gif {
-  height: 100%;
-  width: 100%;
-}
-
-#gif:active {
-  transform: scale3d(1.3, 1.3, 1.3);
-}
-
-h2 {
-  text-align: center;
-  font-size: 1.5em;
-  color: #e94d58;
-  margin-bottom: 100px;
-  font-size: 45px;
-}
-
-#btn-group {
-  width: 100%;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  margin-top: 50px;
-}
-
-button {
-  width: 150px;
-  position: absolute;
-  height: inherit;
-  color: white;
-  outline: none;
-  cursor: pointer;
-  border-radius: 30px;
-  box-shadow: 0 2px 4px gray;
-  border: 2px solid #e94d58;
-  font-size: 30px;
-}
-
-button:nth-child(1) {
-  margin-left: -200px;
-  background: #e94d58;
-}
-
-button:nth-child(2) {
-  margin-right: -200px;
-  background: white;
-  color: #e94d58;
-}
-
-#no-btn {
-  cursor: not-allowed;
-}
-</style>
+        </head>
 <body>
     <div id="wrapper">
         <h2 id="question">¿Will you forever be my valentine cum Baiko cum Bou cum Bestieee♥?</h2>
