--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ const yesBtn = document.getElementById("yes-btn");
 const noBtn = document.getElementById("no-btn");
 
 yesBtn.addEventListener("click", () => {
-  question.innerHTML = "Lo sabía 7w7r ❤✨";
+  question.innerHTML = "YAYYYYYY ♥♥♥ Meow Meow Meowww..... You are the cat i love and want to have with me forever. U are the cutest prettiest and absolutely purr-fect cat for me.. Please Meowwyyy MEEEE !!!";
   gif.src = "https://i.pinimg.com/originals/ce/63/c2/ce63c26f8747e2181594d2db8787c026.gif";
   noBtn.hidden = true;
   yesBtn.hidden = true;
