--- a/index.html
+++ b/index.html
@@ -3,45 +3,46 @@
     <link rel="stylesheet" href="style.css">
         </head>
 <body>
-    <div id="wrapper">
-        <h2 id="question">¿Will you forever be my valentine cum Baiko cum Bou cum Bestieee♥?</h2>
-        <img id="gif" alt="gif" src="https://i.pinimg.com/originals/ea/2d/e8/ea2de8f83e89f316c0a5169d09a0b536.gif" />
-        <div id="btn-group">
-            <button id="yes-btn">Hoiii</button>
-            <button id="no-btn">Noiii</button>
+        <div id="wrapper">
+            <h2 id="question">¿Will you forever be my valentine cum Baiko cum Bou cum Bestieee♥?</h2>
+            <img id="gif" alt="gif" src="https://i.pinimg.com/originals/ea/2d/e8/ea2de8f83e89f316c0a5169d09a0b536.gif" />
+            <div id="btn-group">
+                <button id="yes-btn">Hoiii</button>
+                <button id="no-btn">Noiii</button>
+            </div>
         </div>
-    </div>
-    <script>
-        const wrapper = document.getElementById("wrapper");
-const gif = document.getElementById("gif");
-const question = document.getElementById("question");
-const yesBtn = document.getElementById("yes-btn");
-const noBtn = document.getElementById("no-btn");
+        <script>
+            const wrapper = document.getElementById("wrapper");
+            const gif = document.getElementById("gif");
+            const question = document.getElementById("question");
+            const yesBtn = document.getElementById("yes-btn");
+            const noBtn = document.getElementById("no-btn");
 
-yesBtn.addEventListener("click", () => {
-  question.innerHTML = "YAYYYYYY ♥♥♥ Meow Meow Meowww..... You are the cat i love and want to have with me forever. U are the cutest prettiest and absolutely purr-fect cat for me.. Please Meowwyyy MEEEE !!!";
-  gif.src = "https://i.pinimg.com/originals/ce/63/c2/ce63c26f8747e2181594d2db8787c026.gif";
-  noBtn.hidden = true;
-  yesBtn.hidden = true;
-});
+            yesBtn.addEventListener("click", () => {
+                question.innerHTML = "YAYYYYYY ♥♥♥ Meow Meow Meowww..... You are the cat I love and want to have with me forever. U are the cutest prettiest and absolutely purr-fect cat for me.. Please Meowwyyy MEEEE !!!";
+                gif.src = "https://i.pinimg.com/originals/ce/63/c2/ce63c26f8747e2181594d2db8787c026.gif";
+                noBtn.hidden = true;
+                yesBtn.hidden = true;
+            });
 
-noBtn.addEventListener("mouseover", () => {
-  const noBtnRect = noBtn.getBoundingClientRect();
-  const maxX = window.innerWidth - noBtnRect.width;
-  const maxY = window.innerHeight - noBtnRect.height;
+            noBtn.addEventListener("mouseover", () => {
+                const noBtnRect = noBtn.getBoundingClientRect();
+                const maxX = window.innerWidth - noBtnRect.width;
+                const maxY = window.innerHeight - noBtnRect.height;
 
-  const randomX = Math.floor(Math.random() * maxX);
-  const randomY = Math.floor(Math.random() * maxY);
+                const randomX = Math.floor(Math.random() * maxX);
+                const randomY = Math.floor(Math.random() * maxY);
 
-  noBtn.style.left = randomX + "px";
-  noBtn.style.top = randomY + "px";
-});
+                noBtn.style.left = randomX + "px";
+                noBtn.style.top = randomY + "px";
+            });
 
-noBtn.addEventListener("click", () => {
-  question.innerHTML = "";
-  gif.src = "https://i.pinimg.com/originals/03/a4/28/03a428ee705240475480c7722c6c2b3b.gif";
-  noBtn.hidden = true;
-  // yesBtn.hidden = true;
-});
-</script>
-</body>
+            noBtn.addEventListener("click", () => {
+                question.innerHTML = "";
+                gif.src = "https://i.pinimg.com/originals/03/a4/28/03a428ee705240475480c7722c6c2b3b.gif";
+                noBtn.hidden = true;
+                yesBtn.hidden = true;
+            });
+        </script>
+    </body>
+</html>
