--- a/index.html
+++ b/index.html
@@ -1,6 +1,71 @@
 <html>
     <head>
     <link rel="stylesheet" href="style.css">
+        <style>
+            * {
+  font-family: "Dancing Script", cursive;
+  margin: 0;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+#gif {
+  width:100%;
+}
+
+#gif:active {
+  transform: scale3d(1.3, 1.3, 1.3);
+}
+
+h2 {
+  text-align: center;
+  font-size: 3em;
+  color: #e94d58;
+  margin-bottom: 100px;
+  font-size: 45px;
+}
+
+#btn-group {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+
+button {
+  width: 150px;
+  position: absolute;
+  height: inherit;
+  color: white;
+  outline: none;
+  cursor: pointer;
+  border-radius: 30px;
+  box-shadow: 0 2px 4px gray;
+  border: 2px solid #e94d58;
+  font-size: 30px;
+}
+
+button:nth-child(1) {
+  margin-left: -200px;
+  background: #e94d58;
+}
+
+button:nth-child(2) {
+  margin-right: -200px;
+  background: white;
+  color: #e94d58;
+}
+
+#no-btn {
+  cursor: not-allowed;
+}
+        </style>
         </head>
 <body>
         <div id="wrapper">
